# sochdb-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  sochdb_rust_studio.txt  tailwind.config.js
deploy/self-hosted/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.vm.yml  nginx.conf
docs/: STUDIO_BACKEND_API.md  STUDIO_WEB_AND_CLOUD_ARCHITECTURE.md  STUDIO_WORKBENCH_V1.md
scripts/: generate-workbench-data.mjs
server/: grpcClient.mjs  mcpClient.mjs  projectStore.mjs  studio-backend.mjs
server/proto/: sochdb.proto
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  policy.rs  state.rs
src-tauri/src/commands/: admin.rs  context.rs  llm.rs  mcp.rs  mod.rs  query.rs  schema.rs  vector.rs
src-tauri/src/connection/: manager.rs  mod.rs  pool.rs
src-tauri/src/parser/: mod.rs  sql.rs  toonql.rs
src/components/: Icons.tsx
src/components/settings/: LlmSettingsTab.tsx
src/components/ui/: ConnectionModal.tsx  StatCard.tsx
src/features/recipes/: BudgetVisualization.tsx  RecipeEditor.tsx
src/hooks/: useQuery.ts  useSchema.ts  useSochDB.ts  useToonDB.ts
src/layouts/: RootLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/lib/: api.ts  studioDataClient.ts
src/pages/: AdminPage.tsx  AssistantPage.tsx  ConsolePage.tsx  Dashboard.tsx  ExplorerPage.tsx  ObservabilityPage.tsx  QueryPage.tsx  SettingsPage.tsx
src/pages/mcp/: McpRegistry.tsx  (+2 more)
src/stores/: connection.ts  query.ts  recipeStore.ts  schema.ts
(+5 files in other folders)
