[package]
name = "sochdb-studio"
version = "0.3.0"
description = "SochDB Studio - Database Administration Tool for SochDB"
authors = ["SochDB Team"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[lib]
name = "sochdb_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

# SochDB integration
sochdb = { version = "0.4.0", path = "../../sochdb/sochdb-client", features = ["embedded"] }
sochdb-core = { version = "0.4.0", path = "../../sochdb/sochdb-core" }
sochdb-storage = { version = "0.4.0", path = "../../sochdb/sochdb-storage" }
sochdb-mcp = { version = "0.4.0", path = "../../sochdb/sochdb-mcp" }

# Async utilities
parking_lot = "0.12"

# LLM integration
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-store = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
